Working, but not pretty.
