# internal/server/handlers.go
@@ -125,11 +125,6 @@ func (a *API) DeleteUser(c *gin.Context, r *api.Resource) error {
 	return access.DeleteIdentity(c, r.ID)
 }
 
-// TODO: remove after deprecation period
-func (a *API) ListUserGroups(c *gin.Context, r *api.Resource) (*api.ListResponse[api.Group], error) {
-	return a.ListGroups(c, &api.ListGroupsRequest{UserID: r.ID})
-}
-
 func (a *API) ListGroups(c *gin.Context, r *api.ListGroupsRequest) (*api.ListResponse[api.Group], error) {
 	groups, err := access.ListGroups(c, r.Name, r.UserID)
 	if err != nil {
